# QMAP

./: .gitignore  README.md
QMAP/: .gitignore  CLAUDE.md  Cargo.toml  README.md  build_doc.py  generate_esm_embeddings.py  pyproject.toml  search_different_split.py  test_installation.py  utils.py
QMAP/.github/workflows/: build-wheels.yml
QMAP/aligner/: encoder.py  vectorizedDB.py
QMAP/docs/examples/: split_dataset.ipynb  toolkit.ipynb  use_benchmark.ipynb
QMAP/docs/references/: BenchmarkSubset.md  Bond.md  DBAASPDataset.md  Encoder.md  HemolyticActivity.md  Identity.md  MultiAlignment.md  QMAPBenchmark.md  QMAPClassificationMetrics.md  QMAPRegressionMetrics.md  Sample.md  Target.md  VectorizedDB.md  align_db.md  align_seq.md  align_seq2db.md  build_graph.md  compute_binary_mask.md  compute_global_identity.md  compute_maximum_identity.md  create_edgelist.md  diversity_proportional_split.md  filter_out.md  get_cache_dir.md  leiden_community_detection.md  maximize_diversity_split.md  random_cluster_split.md  read_fasta.md  sequence_entropy.md  train_test_split.md
QMAP/pwiden_engine/: .gitignore  CLAUDE.md  Cargo.toml  README.md  example.py  pyproject.toml  test_binary_mask.py  test_cache_params.py  test_cache_structured.py  test_edgelist.py  test_integer_indices.py  test_sequences.txt  test_structured_array.py
QMAP/pwiden_engine/src/: binary_mask.rs  edgelist.rs  global_identity.rs  lib.rs  maximum_identity.rs
QMAP/src/qmap/: __init__.py
QMAP/tests/: conftest.py  test_aligner.py  test_clustering.py  test_split.py
QMAP/tests/assets/: expected_alignment_matrix.npy  expected_embeddings.pt
data/: .gitignore  README.md  Visualize_data_annotations.ipynb  align_pep_atlas.py  build_DBAASP.py  build_dataset.py  cluster_cdhit.sh  dataset_clustering.ipynb  dataset_complexities.ipynb  download_pep_atlas.py  merge_alignments_pep_atlas.py  pep_atlas2dbaasp.py  pyproject.toml  quantiles.txt  split_pep_atlas.py  utils.py
data/DBAASP/: bond.py  fetch.py  peptide.py  properties.py  target_base.py  utils.py
data/DBAASP/src/: C_terminus.yaml  N_terminus.yaml  Unusual_Amino_Acid.yaml
data/dbaasp/: build_dataset.py  make_benchmark.py  upload_to_hf.py  utils.py
data/dbaasp/api/: __init__.py  dataset.py  hemolytic.py  target.py
data/dbaasp/dbaasp/: __init__.py  bond.py  fetch.py  peptide.py  target.py  target_base.py  toxicity.py  utils.py
data/pepAtlas/: download_pep_atlas.py
data_leakage/: .gitignore  README.md  analyse_cdhit.ipynb  analyse_encoder_perf_on_dbaasp.ipynb  analyse_mmseqs.ipynb  analyse_novel.ipynb  analyse_random.ipynb  assemble_matrix.py  pyproject.toml  slurm_compute_matrix.sh
data_leakage/utils/: __init__.py  functional.py
deep/: .gitignore  README.md  loss.py  main.py  pyproject.toml  setup.py  test_qmap_encoder.py
deep/configs/: ESM_35M.yml  ESM_8M.yml  formats.py
deep/data/: alignment_collator.py  dataloader.py  dataset.py
deep/experiments/: experiment1.py
deep/losses/: __init__.py  functional.py
deep/models/: __init__.py  esm.py  esm_encoder.py
deep/models/modules/: __init__.py
deep/notebooks/: scaling_laws.ipynb
deep/schedulers/: scheduler.py
deep/scripts/: train_esm_150M.sh  train_esm_35M_ema_pooling.sh  train_esm_35M_final_act.sh  train_esm_35M_hsearch.sh  train_esm_35M_late_proj.sh  train_esm_35M_miscellaneous.sh  train_esm_35M_mlp.sh  train_esm_35M_mlp2.sh  train_esm_35M_noclf_nopretrained.sh  train_esm_8M_adam.sh  train_final_esm_35M.sh
deep/training/: train.py
deep/utils/: __init__.py  bin.py  cli.py  dynamicMetric.py  esm_alphabet.py  functions.py
deepheuristic/: .gitignore  README.md  main.py  pyproject.toml  test_qmap_encoder.py
deepheuristic/configs/: ESM_150M.yml  ESM_35M.yml  ESM_35M_late.yml  ESM_8M.yml  formats.py
deepheuristic/data/: __init__.py  alignment_collator.py  base_collator.py  dataloader.py  dataset.py
deepheuristic/experiments/: experiment1.py
deepheuristic/losses/: functional.py  loss.py
deepheuristic/model_assets/: model_card.md
deepheuristic/models/: __init__.py  esm.py
deepheuristic/notebooks/: scaling_laws.ipynb
deepheuristic/optimizers/: optimizer.py
deepheuristic/schedulers/: scheduler.py
deepheuristic/scripts/: train_esm_150M.sh  train_esm_150M_miscellaneous.sh  train_esm_35M.sh  train_esm_35M_hsearch.sh  train_esm_35M_late_proj.sh  train_esm_35M_miscellaneous.sh  train_esm_35M_mlp2.sh  train_esm_35M_norm.sh  train_esm_35M_reg.sh  train_esm_8M.sh  train_esm_8M_adam.sh
deepheuristic/training/: train.py
deepheuristic/utils/: __init__.py  checkpoint.py  functions.py  load_esm.py
eval_prev_works/AMP_regression_EC_SA/: main.py  pyproject.toml
eval_prev_works/AMP_regression_EC_SA/results/: full.csv  high_complexity.csv  (+3 more)
eval_prev_works/HemoLinear/: generate_esm_embeddings.py  main.py  pyproject.toml
figures/: README.md  Visualize_data_annotations.ipynb  analyse_encoder_perf_on_dbaasp.ipynb  dataset_complexities.ipynb  ideal_identity.ipynb  max_iden_splits.py  pepatlas2dbaasp.py  pyproject.toml  threshold2pcc.py  utils.py
figures/figs/: homology_split.txt  pcc_vs_threshold.txt  pep_atlas_dbaasp_identity.txt  random_split.txt
projects/Antimicrobial-Peptides/: README.md  main.py  pyproject.toml
projects/hemo_end2end/: main.py  pyproject.toml
split_experiment/: .gitignore  README.md  compute_matrix.sh  graph_analysis.ipynb  ideal_identity.ipynb  ideal_identity.ipynb.bak  pyproject.toml
split_experiment/cdhit/: analyse_cdhit.ipynb  analyse_cdhit_full.ipynb  cluster_cdhit.sh  prepare_fasta_dataset.py
split_experiment/community_detection/: analyse_community_detection.ipynb  analyse_community_detection_full.ipynb
split_experiment/deepheuristic/: analyse_deep_heuristic.ipynb
split_experiment/ground_truth/: assemble_matrix.py  compute_identity.py  utils.py
split_experiment/mmseqs/: analyse_mmseqs.ipynb  analyse_mmseqs.py  analyse_mmseqs_full.ipynb  cluster_mmseqs.sh  prepare_fasta_dataset.py
split_experiment/random_split/: analyse_random.ipynb  analyse_random_full.ipynb  split.py
split_experiment/split_utils/: __init__.py  functional.py  identity.py
(+138 files in other folders)
