[package]
name = "pwiden_engine"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pwiden_engine"
path = "pwiden_engine/src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
dirs = "6.0.0"
indicatif = { version = "0.18.3", features = ["rayon"] }
ndarray = "0.17.2"
numpy = "0.27.1"
parasail-rs = "0.8.1"
pyo3 = "0.27.0"
rayon = "1.11.0"
sha2 = "0.10.9"
