[project]
name = "qmap"
version = "0.0.0"
description = "Toolkit to split protein sequences databases into distinct clusters based on pseudo identity"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "antho-utils>=0.1.0",
    "ema-pytorch>=0.7.7",
    "numpy>=2.3.1",
    "torch>=2.7.1",
]
keywords = ["qmap", "protein", "clustering", "sequence", "database", "machine learning", "deep learning"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.hooks.version]
path = "src/qmap/__version__.py"

[tool.hatch.build.targets.sdist]
include = [
  "src/qmap",
  "pyproject.toml",
  "README.md"
]
