[project]
name = "qmap"
version = "0.0.0"
description = "Toolkit to split protein sequences databases into distinct clusters based on pseudo identity"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "antho-utils>=0.1.0",
    "huggingface-hub>=0.34.3",
    "igraph>=0.11.9",
    "leidenalg>=0.10.2",
    "numpy>=2.0",
    "pandas>=2.3.1",
    "safetensors>=0.5.3",
    "torch>=2.7.1",
]
keywords = ["qmap", "protein", "clustering", "sequence", "database", "machine learning", "deep learning"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.hooks.version]
path = "src/qmap/__version__.py"

[tool.hatch.build.targets.sdist]
include = [
  "src/qmap",
  "src/qmap/aligner/model/weights/85.pth",
  "pyproject.toml",
  "README.md"
]

[dependency-groups]
dev = [
    "matplotlib>=3.9",
    "pytest>=8.4.1",
    "scikit-learn>=1.5",
    "setuptools>=80.9.0",
    "transformers>=4.54.1",
]
