[project]
name = "qmap-benchmark"
version = "0.0.2"
description = "Benchmark for AMP MIC regression and toxicity prediction with a Toolkit to split peptide sequences datasets into independent sets based on pseudo identity"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "huggingface-hub>=0.34.3",
    "igraph>=0.11.9",
    "leidenalg>=0.10.2",
    "numpy>=1.22",
    "pandas>=1.4",
    "scipy>=1.10.1",
]
keywords = ["qmap", "protein", "clustering", "sequence", "database", "machine learning", "deep learning"]

[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Include Python source files in addition to the Rust extension
python-source = "src"
python-packages = ["qmap"]
profile = "release"
# Include the pwiden_engine Rust source directory
# include = ["pwiden_engine/src/**/*.rs"]
exclude = [
    "pwiden_engine/*",
    "!pwiden_engine/src",
]

[dependency-groups]
dev = [
    "cibuildwheel>=2.23.3",
    "matplotlib>=3.8",
    "pytest>=8.4.1",
    "scikit-learn>=1.5",
    "setuptools>=80.9.0",
    "torch>=2.8.0",
    "transformers>=4.54.1",
]
