[project]
name = "data"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "qmap",
    "rdkit>=2025.3.3",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
qmap = { path = "../QMAP", editable = true }
