[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebook>=7.4.7",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "rdkit>=2025.3.3",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.6",
    "scikit-learn>=1.7.2",
    "beautifulsoup4>=4.13.4",
    "biopython>=1.85",
    "pandas>=2.3.0",
    "tqdm>=4.67.1",
    "qmap-benchmark",
]

[tool.uv.sources]
qmap = { path = "../QMAP", editable = true }
qmap-benchmark = { path = "../QMAP" }
