[project]
name = "template-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "antho-utils>=0.1.0",
    "deepboard[full]>=0.2.3",
    "ema-pytorch>=0.7.7",
    "fair-esm>=2.0.0",
    "huggingface-hub>=0.34.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>2.0.0",
    "optuna>=4.4.0",
    "optuna-dashboard>=0.18.0",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "pyyaml>=6.0.2",
    "qmap-benchmark",
    "safetensors>=0.5.3",
    "scipy>=1.15.3",
    "torch>=2.7.1",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.7.2",
    "torchvision>=0.22.1",
]

[tool.uv.sources]
qmap-benchmark = { path = "../QMAP" }
