[project]
name = "figures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "qmap-benchmark",
    "rdkit>=2025.9.1",
    "scikit-learn>=1.7.2",
]

[tool.uv.sources]
qmap-benchmark = { path = "../QMAP" }
