[project]
name = "split-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "antho-utils>=0.1.0",
    "biopython>=1.85",
    "igraph>=0.11.9",
    "leidenalg>=0.10.2",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "qmap",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
qmap = { path = "../QMAP", editable = true }
