[project]
name = "amp-regression-ec-sa-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "biopython==1.81",
    "numpy<2.0",
    "pandas>=2.3.1",
    "qmap",
    "scikit-learn>=1.7.1",
    "torch==2.2.*",
    "transformers==4.28.1",
]

[tool.uv.sources]
qmap = { path = "../../QMAP" }
