[project]
name = "linear"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "antho-utils>=0.1.0",
    "qmap",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "transformers>=4.55.1",
]

[tool.uv.sources]
qmap = { path = "../../QMAP", editable = true }
