[project]
name = "antimicrobial-peptides-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biopython==1.75",
    "h5py>=3.14.0",
    "numpy==1.22.0",
    "pandas<2.0",
    "scikit-learn>=1.7.1",
    "six==1.15",
    "tensorflow==2.11.1",
    "testresources==2.0.1",
]
