[project]
name = "hemo-end2end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.3.1",
    "qmap",
    "scikit-learn>=1.7.1",
    "tensorflow==2.16.*",
]

[tool.uv.sources]
qmap = { path = "../../QMAP", editable = true }
